--- a/public/la-note-enchantee.html
+++ b/public/la-note-enchantee.html
@@ -2,7 +2,7 @@
 <html lang=fr>
 <head>
     <Meta charset="utf-8"/>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet"><script src="https://kit.fontawesome.com/fdbfa822b3.js" crossorigin="anonymous"></script>
