modif homepage with sass and create menu-pages

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -2,7 +2,7 @@
 <html lang=fr>
 <head>
     <Meta charset="utf-8"/>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="public/css/style.css"/>
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet"><script src="https://kit.fontawesome.com/fdbfa822b3.js" crossorigin="anonymous"></script>
@@ -12,52 +12,69 @@
 <body>
     <header>
         <div class="logo">
-        <img src="img/logo.png" alt="Ohmyfood"/>
+        <img src="public/img/logo.png" alt="Ohmyfood"/>
         <h1 hidden> Ohmyfood , réservez votre menu avant votre venue</h1>
         </div>
     </header>
 
     <main>
         <h2 class="name"> La palette du goût</h2>
-        <section class=entrées>
+        <section class="entrées">
             <h3>entrées</h3>
-            <p>Fricassée d'escargot
+            <div class="step --whitestep">
+                Fricassée d'escargot
                 Au piment d'Espelette 
-                25€</p>
-             <p>Foie gras de canard mi-cuit
+                25€
+            </div>
+            <div class="step --whitestep">
+                Foie gras de canard mi-cuit
                 Et ses copeaux de truffe noire
-                35€</p>
-            <p>Oeuf au plat
-               Assaisonné à la truffe sur lit de caviar
-               20€</p>
+                35€
+            </div>
+            <div class="step --whitestep">
+                Oeuf au plat
+                Assaisonné à la truffe sur lit de caviar
+                20€
+            </div>
         </section>
 
         <section class="plats">
             <h3>Plats</h3>
-            <p>Filet de boeuf aux herbes
+            <div class="step --whitestep"
+                >Filet de boeuf aux herbes
                 Accompagné de sa ribambelle de légumes
-                40€</p>
-            <p>Parmentier de queue de boeuf
+                40€
+            </div>
+            <div class="step --whitestep">
+                Parmentier de queue de boeuf
                 À la truffe noire sur sa purée de panais
-                35€</p>
-            <p>Filet de turbot
+                35€
+            </div>
+            <div class="step --whitestep">
+                Filet de turbot
                 Aux agrumes
-                44€</p>
+                44€
+            </div>
         </section>
         <section class="desserts">
             <h3>desserts</h3>
-            <p>Paris-Brest
+            <div class="step --whitestep">
+                Paris-Brest
                 Revisité
-                18€</p>
-            <p>Macaron au chocolat d'exception 
+                18€
+            </div>
+            <div class="step --whitestep">
+                Macaron au chocolat d'exception 
                 Et glace à la vanille de Madagascar
-                22€</p>
-            <p>Mousse au chocolat 
+                22€
+            </div>
+            <div class="step --whitestep">
+                Mousse au chocolat 
                 Au piment d'Espelette et à la truffe noire
-                23€  </p>
+                23€  </div>
 
         </section>
-        <section class="btn">
+        <section class="colorbtn">
             <p>Commander</p>
         </section>
 
