--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=fr>
 <head>
     <Meta charset="utf-8"/>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="public/css/style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet"><script src="https://kit.fontawesome.com/fdbfa822b3.js" crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-        <img src="img/logo.png" alt="Ohmyfood"/>
+        <img src="public/img/logo.png" alt="Ohmyfood"/>
         <h1 hidden> Ohmyfood , réservez votre menu avant votre venue</h1>
         </div>
     </header>
@@ -26,7 +26,7 @@
             <div class="search search__text">
                <h2>Réservez le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception,<br/> sélectionnés par nos soins.</p> 
-                <a class="btn" href=""> Explorez nos restaurants </a> 
+                <a class="colorbtn" href=""> Explorez nos restaurants </a> 
             </div>
         </section>
 
@@ -54,7 +54,8 @@
             <h2>Restaurants</h2>
             <div class="restaurant restaurant__cards">
                 <figure class="boxcard">
-                    <img src="img/palette-gout.jpg" alt="la palette du goût"/>
+                    <img src="public/img/palette-gout.jpg" alt="la palette du goût"/>
+                    <figcaption class="new">Nouveau</figcaption>
                     <div class="legend">
                         <span>
                             <a href="la-palette-du-gout.html">
@@ -62,50 +63,59 @@
                              Ménilmontant    
                             </a>
                         </span> 
-                        <span class="heart"><i class="fas fa-heart"></i>
+                        <span class="like">
+                            <i class="far fa-heart default-icon"></i>
+                            <i class="fas fa-heart hover-icon"></i>
                         </span>
                     </div>               
                 </figure>
 
                 <figure class="boxcard">
-                    <img src="img/note-enchantee.jpg" alt="la note enchantée"/>
+                    <img src="public/img/note-enchantee.jpg" alt="la note enchantée"/>
+                    <figcaption class="new">Nouveau</figcaption>
                     <div class="legend">
                         <span>
                             <a href="la-note-enchantee.html">
-                            <strong>La note enchantée</strong>
-                            <p> Charonne</p>
+                            <strong>La note enchantée</strong><br/>
+                             Charonne
                             </a>
                         </span>
-                        <span class="heart"><i class="fas fa-heart"></i>
+                        <span class="like">
+                        <i class="far fa-heart default-icon"></i>
+                        <i class="fas fa-heart hover-icon"></i>
                         </span>
                     </div>
                 </figure>
                     
-                </figure>
-                <figure> class="boxcard">
-                    <img src="img/française.jpg" alt="A la française"/>
+                
+                <figure class="boxcard">
+                    <img src="public/img/française.jpg" alt="A la française"/>
                     <div class="legend">
                         <span>
                             <a href="a-la-française.html">
-                             <strong> A la française</strong>
-                             <p>Cité Rouge</p>   
+                             <strong> A la française</strong><br/>
+                             Cité Rouge   
                             </a>   
                         </span>
-                        <span class="heart"><i class="fas fa-heart"></i>
+                        <span class="like">
+                        <i class="far fa-heart default-icon"></i>
+                        <i class="fas fa-heart hover-icon"></i>
                         </span>
                     </div>
                 </figure>
 
                 <figure class="boxcard">
-                    <img src="img/delice-sens.jpg" alt="le délice des sens"/>
+                    <img src="public/img/delice-sens.jpg" alt="le délice des sens"/>
                     <div class="legend">
                         <span>
                         <a href="le-delice-des-sens.html">
-                        <strong>Le délice des sens</strong>
-                        <p>Folie-Méricourt</p>
+                        <strong>Le délice des sens</strong><br/>
+                        Folie-Méricourt
                         </a>
                         </span>
-                        <span class="heart"><i class="fas fa-heart"></i>
+                        <span class="like"> 
+                        <i class="far fa-heart default-icon"></i>
+                        <i class="fas fa-heart hover-icon"></i>
                         </span>
                     </div> 
                 </figure>
