create animation green check

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -33,68 +33,115 @@
                 </span>
             </div>
             <section class="menu__entrées">
-                <h3>entrées</h3>
-                <div class="step step--menustep">
-                    <div class="choice">
+                <div class="menu__subtitle"><h3>entrées</h3></div>
+                <div class="menustep">
+                    <div class="menu__choice">
                         <h4>Fricassée d'escargot</h4>
-                        <p>Au piment d'Espelette </p>
+                        <p>Au piment d'Espelette
+                        <span class="menu__price">25€</span> </p>
+                    </div>                                    
+                    <div class="check">
+                        <div class="check--off"></div>
+                        <div class="check--on"><i class="fas fa-check-circle"></i>
+                        </div>                               
+                    </div>     
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Foie gras de canard mi-cuit</h4>
+                        <p>Et ses copeaux de truffe noire
+                        <span class="menu__price">35€</span></p>
                     </div>
-                    <div class="price"> 25€                      
+                    <div class="check">
+                        <div class="check--off"></div>
+                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
-            <div class="step step--menustep">
-                <div class="choice">
-                    <h4>Foie gras de canard mi-cuit</h4>
-                    <p>Et ses copeaux de truffe noire</p>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Oeuf au plat</h4>
+                        <p>Assaisonné à la truffe sur lit de caviar
+                        <span class="menu__price">20€</span></p>
+                    </div>
+                    <div class="check">
+                        <div class="check--off"></div>
+                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
                 </div>
-                <div class="price">35€                    
-                </div>                              
-            </div>
-            <div class="step step--menustep">
-                <div class="choice">
-                    <h4>Oeuf au plat</h4>
-                    <p>Assaisonné à la truffe sur lit de caviar</p>
+            </section>
+
+            <section class="menu__plats">
+                <div class="menu__subtitle"> <h3>plats</h3></div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Filet de boeuf aux herbes</h4> 
+                        <p>Accompagné de sa ribambelle de légumes
+                        <span class="menu__price">40€</span></p> 
+                    </div>
+                    <div class="check">
+                        <div class="check--off"></div>
+                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                    </div>
                 </div>
-                <div class="price">20€</div>
-            </div>
-        </section>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Parmentier de queue de boeuf</h4>
+                        <p>À la truffe noire sur sa purée de panais
+                        <span class="menu__price">35€</span></p>
+                    </div>
+                    <div class="check">
+                        <div class="check--off"></div>
+                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                    </div>
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4> Filet de turbot</h4>
+                        <p>Aux agrumes
+                        <span class="menu__price">44€</span></p>
+                    </div>
+                    <div class="check">
+                        <div class="check--off"></div>
+                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                    </div>               
+                </div>
+            </section>
 
-        <section class="plats">
-            <h3>plats</h3>
-            <div class="step --whitestep"
-                >Filet de boeuf aux herbes
-                Accompagné de sa ribambelle de légumes
-                40€
-            </div>
-            <div class="step --whitestep">
-                Parmentier de queue de boeuf
-                À la truffe noire sur sa purée de panais
-                35€
-            </div>
-            <div class="step --whitestep">
-                Filet de turbot
-                Aux agrumes
-                44€
-            </div>
-        </section>
-        <section class="desserts">
-            <h3>desserts</h3>
-            <div class="step --whitestep">
-                Paris-Brest
-                Revisité
-                18€
-            </div>
-            <div class="step --whitestep">
-                Macaron au chocolat d'exception 
-                Et glace à la vanille de Madagascar
-                22€
-            </div>
-            <div class="step --whitestep">
-                Mousse au chocolat 
-                Au piment d'Espelette et à la truffe noire
-                23€  </div>
-
-        </section>
+            <section class="menu__desserts">
+                <div class="menu__subtitle"><h3>desserts</h3></div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Paris-Brest</h4>
+                        <p>Revisité
+                        <span class="menu__price">18€</span></p>   
+                    </div>
+                    <div class="check">
+                        <div class="check--off"></div>
+                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                    </div>                          
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Macaron au chocolat d'exception</h4>
+                        <p>Et glace à la vanille de Madagascar
+                        <span class="menu__price">22€</span></p>
+                    </div>
+                    <div class="check">
+                        <div class="check--off"></div>
+                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                    </div>                          
+                </div>                             
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Mousse au chocolat</h4>
+                        <p>Au piment d'Espelette et à la truffe noire
+                        <span class="menu__price">23€</span></p>
+                    </div>                              
+                    <div class="check">
+                        <div class="check--off"></div>
+                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                    </div> 
+                </div>
+            </section>
         <section class="colorbtn">
             <p>Commander</p>
         </section>
