--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="restaurant__cards">
                 <figure class="restaurant__boxcard">
                     <img src="public/img/palette-gout.jpg" alt="la palette du goût"/>
-                    <figcaption class="new">Nouveau</figcaption>
+                    <div class="new">Nouveau</div>
                     <div class="restaurant__legend">
                         <span>
                             <a href="la-palette-du-gout.html">
@@ -71,7 +71,7 @@
 
                 <figure class="restaurant__boxcard">
                     <img src="public/img/note-enchantee.jpg" alt="la note enchantée"/>
-                    <figcaption class="new">Nouveau</figcaption>
+                    <div class="new">Nouveau</div>
                     <div class="restaurant__legend">
                         <span>
                             <a href="la-note-enchantee.html">
