--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -19,7 +19,6 @@
             <img src="public/img/logo.png" alt="Ohmyfood"/>
             <h1 hidden> Ohmyfood , réservez votre menu avant votre venue</h1>
         </div>
-        </div>
     </header>
 
     <main>
@@ -27,10 +26,10 @@
         <section class="menu">
             <div class="menu__title">
                 <h2 class="name"> La palette du goût</h2>
-                <span class="like"> 
+                <div class="like"> 
                 <i class="far fa-heart default-icon"></i>
                 <i class="fas fa-heart hover-icon"></i>
-                </span>
+                </div>
             </div>
             <section class="menu__entrées">
                 <div class="menu__subtitle"><h3>entrées</h3></div>
@@ -66,6 +65,7 @@
                     <div class="check">
                         <div class="check--off"></div>
                         <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                    </div>
                 </div>
             </section>
 
@@ -142,8 +142,8 @@
                     </div> 
                 </div>
             </section>
-        <section class="colorbtn">
-            <p>Commander</p>
+        <section class="command"> 
+            <a href="" class="colorbtn">Commander </a>
         </section>
     </section>
     </main>
