--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -36,11 +36,10 @@
                 <div class="menustep">
                     <div class="menu__choice">
                         <h4>Fricassée d'escargot</h4>
-                        <p>Au piment d'Espelette
-                        <span class="menu__price">25€</span> </p>
+                        <p>Au piment d'Espelette</p>
                     </div>                                    
                     <div class="check">
-                        <div class="check--off"></div>
+                        <div class="check--off"><span class="menu__price">25€</span></div>
                         <div class="check--on"><i class="fas fa-check-circle"></i>
                         </div>                               
                     </div>     
@@ -48,22 +47,20 @@
                 <div class="menustep">
                     <div class="menu__choice">
                         <h4>Foie gras de canard mi-cuit</h4>
-                        <p>Et ses copeaux de truffe noire
-                        <span class="menu__price">35€</span></p>
+                        <p>Et ses copeaux de truffe noire</p>
                     </div>
                     <div class="check">
-                        <div class="check--off"></div>
+                        <div class="check--off"><span class="menu__price">35€</span></div>
                         <div class="check--on"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
                 <div class="menustep">
                     <div class="menu__choice">
                         <h4>Oeuf au plat</h4>
-                        <p>Assaisonné à la truffe sur lit de caviar
-                        <span class="menu__price">20€</span></p>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <div class="check">
-                        <div class="check--off"></div>
+                        <div class="check--off"><span class="menu__price">20€</span></div>
                         <div class="check--on"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
@@ -74,33 +71,30 @@
                 <div class="menustep">
                     <div class="menu__choice">
                         <h4>Filet de boeuf aux herbes</h4> 
-                        <p>Accompagné de sa ribambelle de légumes
-                        <span class="menu__price">40€</span></p> 
+                        <p>Accompagné de sa ribambelle de légumes</p> 
                     </div>
                     <div class="check">
-                        <div class="check--off"></div>
+                        <div class="check--off"><span class="menu__price">40€</span></div>
                         <div class="check--on"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
                 <div class="menustep">
                     <div class="menu__choice">
                         <h4>Parmentier de queue de boeuf</h4>
-                        <p>À la truffe noire sur sa purée de panais
-                        <span class="menu__price">35€</span></p>
+                        <p>À la truffe noire sur sa purée de panais</p>
                     </div>
                     <div class="check">
-                        <div class="check--off"></div>
+                        <div class="check--off"><span class="menu__price">35€</span></div>
                         <div class="check--on"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
                 <div class="menustep">
                     <div class="menu__choice">
                         <h4> Filet de turbot</h4>
-                        <p>Aux agrumes
-                        <span class="menu__price">44€</span></p>
+                        <p>Aux agrumes</p>
                     </div>
                     <div class="check">
-                        <div class="check--off"></div>
+                        <div class="check--off"><span class="menu__price">44€</span></div>
                         <div class="check--on"><i class="fas fa-check-circle"></i></div>
                     </div>               
                 </div>
@@ -111,33 +105,30 @@
                 <div class="menustep">
                     <div class="menu__choice">
                         <h4>Paris-Brest</h4>
-                        <p>Revisité
-                        <span class="menu__price">18€</span></p>   
+                        <p>Revisité</p>   
                     </div>
                     <div class="check">
-                        <div class="check--off"></div>
+                        <div class="check--off"><span class="menu__price">18€</span></div>
                         <div class="check--on"><i class="fas fa-check-circle"></i></div>
                     </div>                          
                 </div>
                 <div class="menustep">
                     <div class="menu__choice">
                         <h4>Macaron au chocolat d'exception</h4>
-                        <p>Et glace à la vanille de Madagascar
-                        <span class="menu__price">22€</span></p>
+                        <p>Et glace à la vanille de Madagascar</p>
                     </div>
                     <div class="check">
-                        <div class="check--off"></div>
+                        <div class="check--off"><span class="menu__price">22€</span></div>
                         <div class="check--on"><i class="fas fa-check-circle"></i></div>
                     </div>                          
                 </div>                             
                 <div class="menustep">
                     <div class="menu__choice">
                         <h4>Mousse au chocolat</h4>
-                        <p>Au piment d'Espelette et à la truffe noire
-                        <span class="menu__price">23€</span></p>
+                        <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>                              
                     <div class="check">
-                        <div class="check--off"></div>
+                        <div class="check--off"><span class="menu__price">23€</span></div>
                         <div class="check--on"><i class="fas fa-check-circle"></i></div>
                     </div> 
                 </div>
