--- a/a-la-française.html
+++ b/a-la-française.html
@@ -31,7 +31,7 @@
                 <i class="fas fa-heart hover-icon"></i>
                 </div>
             </div>
-            <section class="menu__entrées">
+            <section class="menu__entrees">
                 <div class="menu__subtitle"><h3>entrées</h3></div>
                 <div class="menustep">
                     <div class="menu__choice">
